--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
     <head>
+        <meta charset="utf-8">
+
         <title>
-            WELCOME TO MY WORLD
+            Welcome to Toy World
+            
         </title>
+        <body>
+            <h1></h1>
+
+
+
+
+
+
+
+
+        </body>
     </head>
 
 </html>
